--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(shades_of)
 export(simcol)
 export(slide)
 export(theme_grau)
+export(theme_licht)
 export(theme_unikn)
 export(uline)
 export(unikn.guide)
