export 2 new ggplot2 themes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,8 +36,9 @@ export(seecol)
 export(shades_of)
 export(simcol)
 export(slide)
+export(theme_bwkn)
 export(theme_grau)
-export(theme_licht)
+export(theme_minikn)
 export(theme_unikn)
 export(uline)
 export(unikn.guide)
