--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: unikn
 Type: Package
 Title: Graphical Elements of the University of Konstanz's Corporate Design 
-Version: 1.0.0.9002
-Date: 2025-09-15
+Version: 1.0.0.9003
+Date: 2025-09-16
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn", comment = c(ORCID = "0000-0001-5427-3141")), 
              person("Nico", "Gradwohl", role = "aut", comment = c(ORCID = "0000-0002-8703-905X")))
 Maintainer: Hansjoerg Neth <h.neth@uni.kn>
@@ -33,7 +33,8 @@ Collate: 'color_def_1.R'
          'start_unikn.R'
 Encoding: UTF-8
 LazyData: false
-License: CC BY-SA 4.0 
+License: CC BY-SA 4.0
+DOI: 10.5281/zenodo.7096191
 URL: https://CRAN.R-project.org/package=unikn 
 BugReports: https://github.com/hneth/unikn/issues
 VignetteBuilder: knitr
