--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Encoding: UTF-8
 LazyData: false
 License: CC BY-SA 4.0
 DOI: 10.5281/zenodo.7096191
-URL: https://CRAN.R-project.org/package=unikn 
+URL: https://CRAN.R-project.org/package=unikn, https://hneth.github.io/unikn
 BugReports: https://github.com/hneth/unikn/issues
 VignetteBuilder: knitr
 RoxygenNote: 7.3.3
